deployment.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpsftp
  namespace: namespace-name
spec:
  selector:
    matchLabels:
      service: httpsftp
  replicas: 1
  template:
    metadata:
      labels:
        service: httpsftp
    spec:
      containers:
      - name: httpsftp
        image: nginx:latest
        ports:
        - name: "main"
          containerPort: 80
        volumeMounts:
        - name: httpsftp-config
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: default.conf
        - name: httpsftp-data
          mountPath: "/usr/share/nginx/html"
      volumes:
      - name: httpsftp-config
        configMap:
          name: httpsftp-config
      - name: httpsftp-data
        hostPath:
          path: "/cluster/storage/namespace-name/httpsftp/data/namespace-name/httpsftp"
          type: "DirectoryOrCreate"

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpsftp-ftp
  namespace: namespace-name
spec:
  selector:
    matchLabels:
      service: httpsftp-ftp
  replicas: 1
  template:
    metadata:
      labels:
        service: httpsftp-ftp
    spec:
      containers:
      - name: httpsftp-ftp
        image: atmoz/sftp:alpine
        volumeMounts:
        - name: httpsftp-ftp-data
          mountPath: "/home"
        - name: httpsftp-ftp-users
          mountPath: "/etc/sftp/users.conf"
          readOnly: true
        - name: httpsftp-ftp-key-ed25519
          mountPath: "/etc/ssh/ssh_host_ed25519_key"
          readOnly: true
        - name: httpsftp-ftp-key-rsa
          mountPath: "/etc/ssh/ssh_host_rsa_key"
          readOnly: true
      volumes:
      - name: httpsftp-ftp-data
        hostPath:
          path: "/cluster/storage/namespace-name/httpsftp/data"
          type: "DirectoryOrCreate"
      - name: httpsftp-ftp-users
        hostPath:
          path: "/cluster/namespace-name/httpsftp/config/users.conf"
          type: "File"
      - name: httpsftp-ftp-key-ed25519
        hostPath:
          path: "/cluster/namespace-name/httpsftp/config/keys/ssh_host_ed25519_key"
          type: "File"
      - name: httpsftp-ftp-key-rsa
        hostPath:
          path: "/cluster/namespace-name/httpsftp/config/keys/ssh_host_rsa_key"
          type: "File"

---

kind: Service
apiVersion: v1
metadata:
  name: httpsftp
  namespace: namespace-name
spec:
  selector:
    service: httpsftp
  ports:
  - name: "main"
    protocol: TCP
    port: 80

---

kind: Service
apiVersion: v1
metadata:
  name: httpsftp-ftp
  namespace: namespace-name
spec:
  type: NodePort
  selector:
    service: httpsftp-ftp
  ports:
  - name: "main"
    port: 22
    targetPort: 22
    nodePort: 35063
    protocol: TCP

---

kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: httpsftp
  namespace: namespace-name
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "true"
spec:
  rules:
  - host: httpsftp.namespace-name.domain.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: httpsftp
          servicePort: main
